; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c_alloc_perf_context.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c_alloc_perf_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event_context = type { %struct.pmu*, %struct.task_struct* }
%struct.pmu = type { i32 }
%struct.task_struct = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.perf_event_context* (%struct.pmu*, %struct.task_struct*)* @alloc_perf_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.perf_event_context* @alloc_perf_context(%struct.pmu* %0, %struct.task_struct* %1) #0 {
  %3 = alloca %struct.perf_event_context*, align 8
  %4 = alloca %struct.pmu*, align 8
  %5 = alloca %struct.task_struct*, align 8
  %6 = alloca %struct.perf_event_context*, align 8
  store %struct.pmu* %0, %struct.pmu** %4, align 8
  store %struct.task_struct* %1, %struct.task_struct** %5, align 8
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call %struct.perf_event_context* @kzalloc(i32 16, i32 %7)
  store %struct.perf_event_context* %8, %struct.perf_event_context** %6, align 8
  %9 = load %struct.perf_event_context*, %struct.perf_event_context** %6, align 8
  %10 = icmp ne %struct.perf_event_context* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store %struct.perf_event_context* null, %struct.perf_event_context** %3, align 8
  br label %28

12:                                               ; preds = %2
  %13 = load %struct.perf_event_context*, %struct.perf_event_context** %6, align 8
  %14 = call i32 @__perf_event_init_context(%struct.perf_event_context* %13)
  %15 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %16 = icmp ne %struct.task_struct* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %12
  %18 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %19 = load %struct.perf_event_context*, %struct.perf_event_context** %6, align 8
  %20 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %19, i32 0, i32 1
  store %struct.task_struct* %18, %struct.task_struct** %20, align 8
  %21 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %22 = call i32 @get_task_struct(%struct.task_struct* %21)
  br label %23

23:                                               ; preds = %17, %12
  %24 = load %struct.pmu*, %struct.pmu** %4, align 8
  %25 = load %struct.perf_event_context*, %struct.perf_event_context** %6, align 8
  %26 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %25, i32 0, i32 0
  store %struct.pmu* %24, %struct.pmu** %26, align 8
  %27 = load %struct.perf_event_context*, %struct.perf_event_context** %6, align 8
  store %struct.perf_event_context* %27, %struct.perf_event_context** %3, align 8
  br label %28

28:                                               ; preds = %23, %11
  %29 = load %struct.perf_event_context*, %struct.perf_event_context** %3, align 8
  ret %struct.perf_event_context* %29
}

declare dso_local %struct.perf_event_context* @kzalloc(i32, i32) #1

declare dso_local i32 @__perf_event_init_context(%struct.perf_event_context*) #1

declare dso_local i32 @get_task_struct(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
